--- a/src/css/partials/_media-queries.scss
+++ b/src/css/partials/_media-queries.scss
@@ -1,1 +1,32 @@
-@import "index-animation";
+////Let's see if this works!
+
+$breakpoint-tablet: 530px;
+$breakpoint-desktop: 900px;
+
+@media screen and (min-width: $breakpoint-tablet){
+  header{
+    nav{
+      flex-flow:row wrap;
+      height:unset;
+      min-width:fit-content;
+      max-width:50vw;
+      justify-content: space-between;    
+      .more-link{  display:none;}
+      a{
+        margin:0 1ch  0 0;
+        &:link{
+          border:none;
+          background: $colour-link;
+          color: $colour-bg;
+        }
+        &:visited{
+          border:none;
+          background:$colour-link;
+          color:$colour-bg;
+        }
+        &:link:last-child{border:none;}
+        &:visited:last-child{border:none;}
+      }
+    }
+  }
+}
